baml_language/crates/baml_tests/snapshots/format_checks/baml_tests__format_checks__10_formatter__loop_stmts.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== STRONG AST ERROR ===
Expected token/node of kind LET_STMT, but found PATTERN at loop_stmts.baml:81:10
