baml_language/crates/baml_tests/snapshots/format_checks/baml_tests__format_checks__10_formatter__match_exprs.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
// Testing all the formatter cases for match expressions
// as well as pattern matching formatting permutations

class MatchSuccess {
    data: string
}

class MatchFailure {
    reason: string
}

enum MatchStatus {
    Active,
    Inactive,
    Pending,
}

type MatchResult = MatchSuccess | MatchFailure;

function MatchExprs(x: int, s: MatchStatus, r: MatchResult, b: bool) -> string {
    // ===== Basic match =====

    match (x) {
        0 => "zero",
        _ => "other",
    }

    // ===== Match with many arms =====

    match (x) {
        0 => "zero",
        1 => "one",
        2 => "two",
        3 => "three",
        4 => "four",
        _ => "other",
    }

    // ===== Match with block bodies =====

    match (x) {
        0 => {
            "zero";
        },
        _ => {
            let y = x + 1;
            "other";
        },
    }

    // ===== Trivia positions in match (line comments) =====
    // 1 match leading
    match (x) { // 6 open brace trailing
        // 7 first arm leading
        0 => "zero", // 14 comma trailing
        // 15 second arm leading
        _ => "other", // 20 second body trailing
        // 21 close brace leading
    } // 22 close brace trailing

    ///////////////////

    // ===== Trivia positions in match (block comments) =====
    /* 1 match leading */
    match (x) { /* 6 open brace trailing */
        /* 7 first arm leading */
        0 => "zero", /* 14 comma trailing */
        /* 15 second arm leading */
        _ => "other", /* 20 second body trailing */
        /* 21 close brace leading */
    } /* 22 close brace trailing */

    ///////////////////

    // ===== Trivia in guard arm (line comments) =====
    match (x) {
        // 1 arm leading
        n: int if n > 0 => "positive", // 14 comma trailing
        _ => "other",
    }

    ///////////////////

    // ===== Trivia in guard arm (block comments) =====
    match (x) {
        /* 1 arm leading */
        n: /* 3 colon trailing *//* 4 type leading */int if n > 0 => "positive", /* 14 comma trailing */
        _ => "other",
    }

    ///////////////////

    // ===== Literal patterns =====
    match (x) {
        0 => "zero",
        1 => "one",
        42 => "the answer",
        _ => "unknown",
    }

    // ===== String literal patterns =====
    match ("hello") {
        "hello" => "greeting",
        "bye" => "farewell",
        _ => "other",
    }

    // ===== Boolean literal patterns =====
    match (b) {
        true => "yes",
        false => "no",
    }

    // ===== Binding pattern (named catch-all) =====
    match (x) {
        0 => "zero",
        n => "nonzero",
    }

    // ===== Typed binding pattern =====
    match (x) {
        n: int => "an integer",
    }

    // ===== Enum variant patterns =====
    match (s) {
        MatchStatus.Active => "active",
        MatchStatus.Inactive => "inactive",
        MatchStatus.Pending => "pending",
    }

    // ===== Union patterns =====
    match (x) {
        0 | 1 => "binary",
        2 | 3 | 4 => "small",
        _ => "big",
    }

    // ===== Nested (parenthesized) patterns =====
    match (x) {
        (0) => "zero",
        (1 | 2) => "small",
        _ => "other",
    }

    // ===== Union of enum variants =====
    match (s) {
        MatchStatus.Active | MatchStatus.Pending => "actionable",
        MatchStatus.Inactive => "done",
    }

    // ===== Typed match on union =====
    match (r) {
        s: MatchSuccess => s.data,
        f: MatchFailure => f.reason,
    }

    // ===== Union typed pattern =====
    match (r) {
        x: MatchSuccess | MatchFailure => "something",
    }

    // ===== Deeply nested union patterns =====
    match (x) {
        (0 | 1) | (2 | (3 | (4 | 5))) => "small",
        _ => "big",
    }

    // ===== Guard expressions =====
    match (x) {
        n: int if n > 0 => "positive",
        n: int if n < 0 => "negative",
        _ => "zero",
    }

    // ===== Guard with long condition exceeding limit =====
    match (x) {
        n: int if n > 0 && n < 100 && n != 42 && n != 13 && n != 7 && n != 99 => {
            "acceptable small positive number that passes all the filters"
        },
        _ => "other",
    }

    // ===== Long arm body exceeding limit =====
    match (x) {
        0 => {
            "this is a very long string result that should push the arm width past the default line limit of one hundred columns easily right now"
        },
        1 => {
            "another long string result that also exceeds one hundred columns to test wrapping on the second arm as well as the first arm"
        },
        _ => "short",
    }

    // ===== Long pattern union exceeding limit =====
    match (x) {
        0
            | 1
            | 2
            | 3
            | 4
            | 5
            | 6
            | 7
            | 8
            | 9
            | 10
            | 11
            | 12
            | 13
            | 14
            | 15
            | 16
            | 17
            | 18
            | 19
            | 20
            | 21
            | 22
            | 23
            | 24 =>
        {
            "lots of literals"
        },
        _ => "other",
    }

    // ===== Long enum variant pattern exceeding limit =====
    match (s) {
        MatchStatus.Active | MatchStatus.Inactive | MatchStatus.Pending => {
            "this arm has many long enum variant names that together push past the limit easily"
        },
    }

    // ===== Arm with block body containing nested logic exceeding limit =====
    match (x) {
        0 => {
            let result = if (b) {
                "this is the true branch with a very long string"
            } else {
                "this is the false branch also very long"
            };
            result
        },
        _ => "short",
    }

    // ===== Trivia on wrapping arm (line comments) =====
    match (x) {
        // 1 arm leading
        n: int if n > 0 && n < 100 && n != 42 && n != 13 && n != 7 => {
            // 12 body leading
            "acceptable small positive number that passes all the defined filter conditions" // 13 body trailing
        }, // 14 comma trailing
        _ => "other",
    }

    // ===== Trivia on wrapping arm (block comments) =====
    match (x) {
        /* 1 arm leading */
        n: /* 3 colon trailing *//* 4 type leading */int
            if n > 0 && n < 100 && n != 42 && n != 13 && n != 7 => {
            /* 12 body leading */
            "acceptable small positive number that passes all the defined filter conditions" /* 13 body trailing */
        }, /* 14 comma trailing */
        _ => "other",
    }

    // ===== Complex scrutinee =====
    match (x + 1) {
        0 => "was minus one",
        _ => "other",
    }

    // ===== Long complex scrutinee exceeding limit =====
    match (x * x + b * b + x * b + x + b + x * x * x + b * b * b + x * b * x + b * x * b) {
        0 => "zero polynomial",
        _ => "nonzero",
    }

    // ===== Extraneous whitespace in scrutinee =====
    match (x + 1) {
        0 => "whitespace",
        _ => "other",
    }

    // ===== Extraneous whitespace everywhere =====
    match (x) {
        0 => "zero",
        _ => "other",
    }

    // ===== Nested match =====
    match (x) {
        0 => match (b) {
            true => "zero-true",
            false => "zero-false",
        },
        _ => "nonzero",
    }

    // ===== Deeply nested match =====
    match (x) {
        0 => match (b) {
            true => match (s) {
                MatchStatus.Active => "zero-true-active",
                MatchStatus.Inactive => "zero-true-inactive",
                MatchStatus.Pending => "zero-true-pending",
            },
            false => "zero-false",
        },
        1 => match (r) {
            s: MatchSuccess => match (b) {
                true => s.data,
                false => "one-success-false",
            },
            f: MatchFailure => f.reason,
        },
        _ => "other",
    }

    // ===== Match with nested if/match in body exceeding limit =====
    match (x) {
        0 => {
            if (b) {
                match (s) {
                    MatchStatus.Active => "active",
                    MatchStatus.Inactive => "inactive",
                    MatchStatus.Pending => "pending",
                }
            } else {
                "not bool"
            }
        },
        _ => "other",
    }

    // ===== Match as final expression =====
    match (x) {
        0 => "zero",
        _ => "other",
    }
}
