baml_language/crates/baml_tests/snapshots/format_checks/baml_tests__format_checks__10_formatter__other_exprs.snap
---
source: target/debug/build/baml_tests-9a8b4d484ca600e9/out/generated_tests.rs
expression: output
---
=== FORMATTER ERROR ===
[UnexpectedToken { expected: "expression", found: "'#'", span: Span { file_id: FileId(0), range: 826..827 } }, UnexpectedToken { expected: "expression", found: "'#'", span: Span { file_id: FileId(0), range: 839..840 } }]
