baml_language/crates/baml_tests/snapshots/format_checks/baml_tests__format_checks__10_formatter__template_string_decls.snap
---
source: target/debug/build/baml_tests-9a8b4d484ca600e9/out/generated_tests.rs
expression: output
---
=== FORMATTER ERROR ===
[UnexpectedToken { expected: "template string body", found: "'#'", span: Span { file_id: FileId(0), range: 2045..2046 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 2045..2046 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 2046..2047 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 2052..2057 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 2058..2059 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 2059..2060 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 2061..2062 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 2063..2064 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 2064..2065 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 2066..2067 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 2067..2068 } }, UnexpectedToken { expected: "template string body", found: "'#'", span: Span { file_id: FileId(0), range: 2558..2559 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 2558..2559 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 2559..2560 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 2565..2570 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 2571..2572 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 2572..2573 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 2574..2575 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 2576..2577 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 2577..2578 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 2579..2580 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 2580..2581 } }, UnexpectedToken { expected: "')'", found: "':'", span: Span { file_id: FileId(0), range: 4618..4619 } }, UnexpectedToken { expected: "template string body", found: "':'", span: Span { file_id: FileId(0), range: 4618..4619 } }, UnexpectedToken { expected: "top-level declaration", found: "':'", span: Span { file_id: FileId(0), range: 4618..4619 } }, UnexpectedToken { expected: "top-level declaration", found: "'('", span: Span { file_id: FileId(0), range: 4620..4621 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 4621..4622 } }, UnexpectedToken { expected: "top-level declaration", found: "':'", span: Span { file_id: FileId(0), range: 4622..4623 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 4624..4627 } }, UnexpectedToken { expected: "top-level declaration", found: "')'", span: Span { file_id: FileId(0), range: 4627..4628 } }, UnexpectedToken { expected: "top-level declaration", found: "'->'", span: Span { file_id: FileId(0), range: 4629..4631 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 4632..4638 } }, UnexpectedToken { expected: "top-level declaration", found: "')'", span: Span { file_id: FileId(0), range: 4638..4639 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 4640..4641 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 4641..4642 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 4647..4648 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 4648..4649 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 4650..4665 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 4666..4667 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 4667..4668 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 4669..4670 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 4670..4671 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 4672..4688 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 4689..4690 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 4690..4691 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 4692..4693 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 4693..4694 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 4695..4710 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 4711..4712 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 4712..4713 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 4714..4715 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 4715..4716 } }, UnexpectedToken { expected: "template string body", found: "'#'", span: Span { file_id: FileId(0), range: 7196..7197 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 7196..7197 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 7197..7198 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 7203..7204 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 7204..7205 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 7206..7221 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 7222..7223 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 7223..7224 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 7225..7226 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 7226..7227 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 7228..7244 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 7245..7246 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 7246..7247 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 7248..7249 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 7249..7250 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 7251..7266 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 7267..7268 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 7268..7269 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 7270..7271 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 7271..7272 } }, UnexpectedToken { expected: "template string body", found: "'#'", span: Span { file_id: FileId(0), range: 8256..8257 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 8256..8257 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 8257..8258 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 8263..8264 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 8264..8265 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 8266..8281 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 8282..8283 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 8283..8284 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 8285..8286 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 8286..8287 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 8288..8304 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 8305..8306 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 8306..8307 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 8308..8309 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 8309..8310 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 8311..8326 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 8327..8328 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 8328..8329 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 8330..8331 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 8331..8332 } }, UnexpectedToken { expected: "template string body", found: "'#'", span: Span { file_id: FileId(0), range: 9195..9196 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 9195..9196 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 9196..9197 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 9202..9203 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 9203..9204 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 9205..9220 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 9221..9222 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 9222..9223 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 9224..9225 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 9225..9226 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 9227..9243 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 9244..9245 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 9245..9246 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 9247..9248 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 9248..9249 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 9250..9265 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 9266..9267 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 9267..9268 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 9269..9270 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 9270..9271 } }, UnexpectedToken { expected: "template string body", found: "'#'", span: Span { file_id: FileId(0), range: 10218..10219 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 10218..10219 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 10219..10220 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 10225..10226 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 10226..10227 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 10228..10243 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 10244..10245 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 10245..10246 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 10247..10248 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 10248..10249 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 10250..10266 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 10267..10268 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 10268..10269 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 10270..10271 } }, UnexpectedToken { expected: "top-level declaration", found: "'{'", span: Span { file_id: FileId(0), range: 10271..10272 } }, UnexpectedToken { expected: "top-level declaration", found: "identifier", span: Span { file_id: FileId(0), range: 10273..10288 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 10289..10290 } }, UnexpectedToken { expected: "top-level declaration", found: "'}'", span: Span { file_id: FileId(0), range: 10290..10291 } }, UnexpectedToken { expected: "top-level declaration", found: "'\"'", span: Span { file_id: FileId(0), range: 10292..10293 } }, UnexpectedToken { expected: "top-level declaration", found: "'#'", span: Span { file_id: FileId(0), range: 10293..10294 } }]
